--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tech Fácil: Seu portal de tecnologia para iniciantes. Tutoriais simples, dicas práticas e guias acessíveis para aprender sobre tecnologia.">
-    <title>Tech Fácil</title>
+    <meta name="keywords" content="tecnologia, iniciantes, tutoriais, dicas, aprendizado">
+    <meta name="author" content="Tech Fácil">
+    <title>Tech Fácil - Tecnologia Descomplicada</title>
     <link rel="stylesheet" href="styles.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <header>
@@ -17,6 +20,7 @@
                     <li><a href="sobre.html">Sobre</a></li>
                     <li><a href="tutoriais.html">Tutoriais</a></li>
                     <li><a href="contato.html">Contato</a></li>
+                    <li><a href="politica.html">Política de Privacidade</a></li>
                 </ul>
             </nav>
         </div>
@@ -27,6 +31,20 @@
             <h2>Aprenda tecnologia de forma fácil e prática</h2>
             <p>Tutoriais, dicas e guias para quem está começando no mundo digital.</p>
             <a href="tutoriais.html" class="btn">Comece Agora</a>
+        </section>
+
+        <section class="adsense">
+            <div class="container">
+                <!-- Espaço reservado para Google AdSense -->
+                <ins class="adsbygoogle"
+                    style="display:block; text-align:center;"
+                    data-ad-client="ca-pub-1234567890123456"
+                    data-ad-slot="1234567890"
+                    data-ad-format="auto"></ins>
+                <script>
+                    (adsbygoogle = window.adsbygoogle || []).push({});
+                </script>
+            </div>
         </section>
 
         <section class="articles">
